added mobile button

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
             </td>
           </tr>
           <tr class="nav-row-2">
-            <td colspan="2" class="inner-table-td">
+            <td class="inner-table-td">
               Integrated <br> Payroll
             </td>
+            <td class="inner-table-td">
+                Mobile
+              </td>
           </tr>
           <tr style="height: 20px;">
           </tr>
