--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="navbar-mobile">
     <div class="navbar-container">
-      <img src="images/ENcompass.png" style="height: 60px">
+      <img src="images/ENcompass.png" style="height: 50px">
       <div id="nav-icon3">
         <span></span>
         <span></span>
@@ -24,7 +24,77 @@
     </div>
     <div class="nav-info-container">
       <div class="nav-info">
-        <table class="mobile-nav-table" cellspacing="0">
+        <div class="mobile-nav-row" id="products-row">
+            <span id="products-toggle">Products</span>
+            <div class="products-info-container">
+                <div class="products-info">
+                  <div class="products-info-row">
+                    <div class="products-row-info">
+                      Benefits Administration
+                    </div>
+
+                    <div class="products-row-info">
+                      HR Management
+                      </div>
+                  </div>
+                  <div class="products-info-row">
+                    <div class="products-row-info">
+                      New Hire Onboarding
+                    </div>
+
+                    <div class="products-row-info">
+                      Time Off  Tracking
+                      </div>
+                  </div>
+                  <div class="products-info-row">
+                    <div class="products-row-info">
+                      Asset  Tracking
+                    </div>
+
+                    <div class="products-row-info">
+                      ACA &  COBRA
+                    </div>
+                  </div>
+                  <div class="products-info-row">
+                    <div class="products-row-info">
+                      Integrated  Payroll
+                    </div>
+
+                    <div class="products-row-info">
+                      Mobile
+                      </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+
+        <div class="mobile-nav-row-2">
+          Clients
+        </div>
+
+        <div class="mobile-nav-row-2">
+          Pricing
+        </div>
+
+        <div class="mobile-nav-row-2">
+          MarketPlace
+        </div>
+
+        <div class="mobile-nav-row-2">
+          Book A Demo
+        </div>
+
+        <div class="mobile-nav-row-2">
+          Login
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="spacer"></div>
+</body>
+
+</html>
+       <!-- <table class="mobile-nav-table" cellspacing="0">
           <tr>
             <td colspan="2" class="outer-table-td" style="vertical-align: bottom; ">
                   Products
@@ -103,11 +173,4 @@
           <tr style="height: 10px;">
 
             </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-  <div class="spacer"></div>
-</body>
-
-</html>
+        </table>-->
