--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
           MarketPlace
         </div>
 
-        <div class="mobile-nav-row-2" style="font-size: 25px;">
+        <div class="mobile-nav-row-2">
           Book A Demo
         </div>
 
-        <div class="mobile-nav-row-2" style="font-size: 25px;">
+        <div class="mobile-nav-row-2">
           Login
         </div>
       </div>
@@ -94,83 +94,3 @@
 </body>
 
 </html>
-       <!-- <table class="mobile-nav-table" cellspacing="0">
-          <tr>
-            <td colspan="2" class="outer-table-td" style="vertical-align: bottom; ">
-                  Products
-            </td>
-          </tr>
-          <tr class="nav-row-2">
-            <td class="inner-table-td">
-              Benefits <br> Administration
-            </td>
-            <td class="inner-table-td">
-              HR <br>Management
-            </td>
-          </tr>
-          <tr class="nav-row-2">
-            <td class="inner-table-td">
-              New Hire <br>Onboarding
-            </td>
-            <td class="inner-table-td">
-              Time Off <br> Tracking
-            </td>
-          </tr>
-          <tr class="nav-row-2">
-            <td class="inner-table-td">
-              Asset <br> Tracking
-            </td>
-            <td class="inner-table-td">
-              ACA & <br> COBRA
-            </td>
-          </tr>
-          <tr class="nav-row-2">
-            <td class="inner-table-td">
-              Integrated <br> Payroll
-            </td>
-            <td class="inner-table-td">
-                Mobile
-              </td>
-          </tr>
-          <tr style="height: 20px;">
-          </tr>
-
-          <tr class="outer-row-small">
-            <td  colspan="2" class="outer-table-td">
-              Clients
-            </td>
-          </tr>
-
-          <tr class="outer-row-small">
-            <td  colspan="2" class="outer-table-td">
-              Pricing
-            </td>
-          </tr>
-
-          <tr class="outer-row-small">
-            <td  colspan="2" class="outer-table-td">
-              MarketPlace
-            </td>
-          </tr>
-          <tr style="height: 20px;">
-          </tr>
-          <tr style="height: 10px; ">
-            <td colspan="2" style="border-top: 1px solid rgb(211, 211, 211, .2); ">
-
-            </td>
-          </tr>
-          <tr class="row-section-large">
-            <td  colspan="2" class="outer-table-td"> 
-              Book A Demo
-            </td>
-          </tr>
-
-          <tr class="row-section-large">
-            <td  colspan="2" class="outer-table-td">
-              Login
-            </td>
-          </tr>
-          <tr style="height: 10px;">
-
-            </tr>
-        </table>-->
