--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="navbar-mobile">
     <div class="navbar-container">
-      <img src="images/ENcompass.png" style="height: 50px">
+      <img src="images/EmployeeNavigator.png" style="height: 50px">
       <div id="nav-icon3">
         <span></span>
         <span></span>
