--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
           MarketPlace
         </div>
 
-        <div class="mobile-nav-row-2">
+        <div class="mobile-nav-row-end">
           Book A Demo
         </div>
 
-        <div class="mobile-nav-row-2">
+        <div class="mobile-nav-row-end">
           Login
         </div>
       </div>
