--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="nav-info-container">
       <div class="nav-info">
         <div class="mobile-nav-row" id="products-row">
-            <span id="products-toggle">Products</span>
+            <span id="products-toggle">Products <img id="products-arrow" src="images/products_arrow.png" style="height:20px;"></span>
             <div class="products-info-container">
                 <div class="products-info">
                   <div class="products-info-row">
