--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="nav-info-container">
       <div class="nav-info">
-        <div class="mobile-nav-row" id="products-row">
+        <div class="mobile-nav-row" id="products-row" style="font-size: 25px;">
             <span id="products-toggle">Products <img id="products-arrow" src="images/products_arrow.png" style="height:22px;"></span>
             <div class="products-info-container">
                 <div class="products-info">
