--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar-mobile">
     <div class="navbar-container">
       <img src="images/EmployeeNavigator.png" style="height: 50px">
-      <div id="nav-icon3">
+      <div id="nav-icon">
         <span></span>
         <span></span>
         <span></span>
